--- a/assets/main.css
+++ b/assets/main.css
@@ -12,6 +12,9 @@
   height: 100vh;
 }
 
+.box{
+  position: relative;
+}
 .box img {
   width: 700px;
   display: none;
@@ -27,4 +30,30 @@
 
 .box .active{
   display: block;
+}
+
+.img-footer{
+  position: absolute;
+  bottom: 2%;
+  left: 50%;
+  transform: translate(-50%);
+  padding: 5px;
+  background-color: black;
+  border: 1px solid white;
+  border-radius: 4px;
+}
+
+.img-footer ul li{
+  display: inline-block;
+}
+
+.img-footer ul li a{
+  color: lightgrey;
+  padding: 10px;
+
+}
+
+
+.select i{
+  color: green;
 }
